--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=N0ne@r00t
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+id=1
+name=Rahul
+score=50
