--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/userdb
-spring.datasource.username=root
-spring.datasource.password=N0ne@r00t
+#spring.datasource.url= jdbc:mysql://localhost:3306/userdb
+#spring.datasource.username=root
+#spring.datasource.password=N0ne@r00t
+#
+#spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#Local MongoDB config
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.password=N0ne@r00t
+spring.data.mongodb.database=playerdb
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
 
-id=1
-name=Rahul
+id=20
+name=Rahul NEW
 score=50
