--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,14 @@
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 #Local MongoDB config
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=root
-spring.data.mongodb.password=N0ne@r00t
-spring.data.mongodb.database=playerdb
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=N0ne@r00t
+#spring.data.mongodb.database=playerdb
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+
+spring.data.mongodb.uri=mongodb://172.23.239.74/playerdb
 
 id=20
 name=Rahul NEW
